[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/nest.png" type="Texture" id=1]
[ext_resource path="res://objects/Ant.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Nest.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.6525

[node name="Nest" type="Node2D"]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 3 )
ant = ExtResource( 2 )
antsPerSpawn = 3

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.36224, -1.02168 )
scale = Vector2( 2.8, 2.8 )
texture = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 1 )
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
